--- a/app1/templates/app1.html
+++ b/app1/templates/app1.html
@@ -2,18 +2,21 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=h, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <img src="{% static 'images/001.png' %}" alt="" />
-    <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore perspiciatis architecto consequatur quasi ea debitis aperiam sit. Eligendi quod, obcaecati repellat vel quae pariatur debitis omnis, dicta necessitatibus voluptatibus architecto!</h3>
-</body>
-
+    <h3>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore
+      perspiciatis architecto consequatur quasi ea debitis aperiam sit. Eligendi
+      quod, obcaecati repellat vel quae pariatur debitis omnis, dicta
+      necessitatibus voluptatibus architecto!
+    </h3>   
+  </body>
 </html>
